// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`blocks 1`] = `
Object {
  "Constructor": "dummy",
  "Options": Object {
    "ID": "component",
    "component": [Function],
    "text": "Extra text",
  },
  "html": "
<h3> Title for component
  <!--0-->
</h3>
<div>Foo component content. Extra text</div>
<!--0-->
",
}
`;

exports[`blocks 2`] = `
Object {
  "Constructor": "dummy",
  "Options": Object {
    "ID": "component",
    "component": [Function],
    "text": "Extra text",
  },
  "html": "
<div>Component without block</div>
<!--0-->
",
}
`;

exports[`component 1`] = `
Object {
  "Constructor": "Dynamic",
  "Options": Object {
    "ID": "component",
    "component": [Function],
  },
  "html": "<div>Foo component content</div>",
}
`;

exports[`component options 1`] = `
Object {
  "Constructor": "Dynamic",
  "Options": Object {
    "ID": "component",
    "component": [Function],
    "text": "Extra text",
  },
  "html": "<div>Foo component content. Extra text</div>",
}
`;

exports[`component options 2`] = `
Object {
  "Constructor": "Dynamic",
  "Options": Object {
    "ID": "component",
    "component": [Function],
    "text": "Another extra text",
  },
  "html": "<div>Foo component content. Another extra text</div>",
}
`;

exports[`empty options 1`] = `
Object {
  "Constructor": "Dynamic",
  "Options": Object {
    "ID": "component",
    "component": undefined,
  },
  "html": "",
}
`;

exports[`update component 1`] = `
Object {
  "Constructor": "Dynamic",
  "Options": Object {
    "ID": "component",
    "component": [Function],
    "text": "Extra text",
  },
  "html": "<div>Foo component content. Extra text</div>",
}
`;

exports[`update component 2`] = `
Object {
  "Constructor": "Dynamic",
  "Options": Object {
    "ID": "component",
    "component": [Function],
    "text": "Extra text",
  },
  "html": "<div>Bar component content. Extra text</div>",
}
`;
